# DA_portfolio

./: 04_조건문_문풀날_연습문제_김재천.ipynb  07_함수[모듈]_문풀날_심화문제_김재천.ipynb  260106_Python_기초_실습_텍스트로_된_ETF_수익률_데이터_정리하기.ipynb  README.md  main.py  pyproject.toml  status.txt
01_Daily_Project/: 260109_(Financial_Data_Parsing_Pipeline).ipynb  PJ1_Python_기초_실습_텍스트로_된_ETF_수익률_데이터_정리하기.ipynb  PJ2_(Financial_Data_Parsing_Pipeline).ipynb
01_Daily_Project/PJ00_Daily_Project/: README.md
01_Daily_Project/PJ02_Data_Structure_Optimization/: PJ2_(Financial_Data_Parsing_Pipeline).ipynb
01_Daily_Project/PJ03_Smart_Portfolio_Refactoring/: PJ03_Smart_Portfolio_Refactoring.ipynb  README.md
01_Daily_Project/PJ04_OOP_Portfolio_System/: PJ04_OOP_Portfolio_System.ipynb  README.md
01_Daily_Project/PJ05_Fintech_Data_Pipeline/: PJ05_Fintech_Data_Pipeline.ipynb  README.md
02.Codekata/Codekata_Python/: 260000_Codekata_Python(Template).ipynb  260112_CodeKata_Python.ipynb  260113_Codekata_Python.ipynb
02_Codekata/Codekata_Python/: 260114_Codekata_Python.ipynb
03_Coding_Study/01_Python_Session_Practice/: 성취도평가_연습.ipynb
04_EDA_Traning/: README.md
05_Basic_Project/: PJ_test.ipynb  README.md  dong_verification.ipynb  test2.ipynb
05_Basic_Project/data/: 법정동.csv  (+4 more)
100_성취도평가_260123/: EDA_test.ipynb  Python_Test.ipynb
99. Git_Test/: Interactive-1.ipynb
99_Git_Test/: test.ipynb
Daily_Project/: 260106_Python_기초_실습_텍스트로_된_ETF_수익률_데이터_정리하기.ipynb  260109_(Financial_Data_Parsing_Pipeline).ipynb
Python_Session_Practice/: 05_반복문_문풀날_연습문제.ipynb  07_함수[모듈]_문풀날_연습문제_김재천.ipynb
test_project/: .gitignore
(+54 files in other folders)
